--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,54 @@
-# change the prefix to C-a
+# change prefix to Ctrl-a (like in gnu-screen)
 unbind C-b
-set -g prefix C-a
-# set scrollback to 10000 lines
-set -g history-limit 10000
+set-option -g prefix C-a
+
+# Allows us to use C-a a <command> to send commands to a TMUX session inside
+# another TMUX session
+bind-key a send-prefix
+
+# shell
+set -g default-command /bin/zsh
+set -g default-shell /bin/zsh
+
+# start with window 1 (instead of 0)
+set -g base-index 1
+
+# start with pane 1
+set -g pane-base-index 1
+
+# screen mode
+set -g default-terminal "screen-256color"
+
+# source config file
+bind r source-file ~/.tmux.conf
+
+# history
+set -g history-limit 4096
+
+# allow terminal scrolling
+set-option -g terminal-overrides 'xterm*:smcup@:rmcup@'
+
+# C-a C-a for last active window
+bind-key C-a last-window
+
+# set escape delay time to zero
+set -s escape-time 0
+
+# allows windows not constrained to the size of the smallest window
+setw -g aggressive-resize on
+
+# Set status bar
+set -g status-bg black
+set -g status-fg white
+set -g status-left ""
+set -g status-right "#[fg=green]#H"
+
+# Activity monitoring
+setw -g monitor-activity on
+set -g visual-activity on
+
+# Example of using a shell command in the status line
+#set -g status-right "#[fg=yellow]#(uptime | cut -d ',' -f 2-)"
+
+# Highlight active window
+set-window-option -g window-status-current-bg red
