--- a/.conkyrc
+++ b/.conkyrc
@@ -1,108 +1,91 @@
-#!! drop in Solarized colorscheme for Xresources/Xdefaults
-#
-#!!SOLARIZED HEX     16/8 TERMCOL  XTERM/HEX   L*A*B      RGB         HSB
-#!!--------- ------- ---- -------  ----------- ---------- ----------- -----------
-#!!base03    #002b36  8/4 brblack  234 #1c1c1c 15 -12 -12   0  43  54 193 100  21
-#!!base02    #073642  0/4 black    235 #262626 20 -12 -12   7  54  66 192  90  26
-#!!base01    #586e75 10/7 brgreen  240 #585858 45 -07 -07  88 110 117 194  25  46
-#!!base00    #657b83 11/7 bryellow 241 #626262 50 -07 -07 101 123 131 195  23  51
-#!!base0     #839496 12/6 brblue   244 #808080 60 -06 -03 131 148 150 186  13  59
-#!!base1     #93a1a1 14/4 brcyan   245 #8a8a8a 65 -05 -02 147 161 161 180   9  63
-#!!base2     #eee8d5  7/7 white    254 #e4e4e4 92 -00  10 238 232 213  44  11  93
-#!!base3     #fdf6e3 15/7 brwhite  230 #ffffd7 97  00  10 253 246 227  44  10  99
-#!!yellow    #b58900  3/3 yellow   136 #af8700 60  10  65 181 137   0  45 100  71
-#!!orange    #cb4b16  9/3 brred    166 #d75f00 50  50  55 203  75  22  18  89  80
-#!!red       #dc322f  1/1 red      160 #d70000 50  65  45 220  50  47   1  79  86
-#!!magenta   #d33682  5/5 magenta  125 #af005f 50  65 -05 211  54 130 331  74  83
-#!!violet    #6c71c4 13/5 brmagenta 61 #5f5faf 50  15 -45 108 113 196 237  45  77
-#!!blue      #268bd2  4/4 blue      33 #0087ff 55 -10 -45  38 139 210 205  82  82
-#!!cyan      #2aa198  6/6 cyan      37 #00afaf 60 -35 -05  42 161 152 175  74  63
-#!!green     #859900  2/2 green     64 #5f8700 60 -20  65 133 153   0  68 100  60
-
-own_window_class Conky
+background no
+use_xft yes
+xftfont 131:size=7
+xftalpha 0.1
+update_interval 1
+total_run_times 0
 own_window yes
-own_window_type override
+own_window_type normal
 own_window_transparent yes
 own_window_hints undecorated,below,sticky,skip_taskbar,skip_pager
-
-background yes
-use_xft yes
-xftfont Terminus:size=9
-xftalpha 1.0
-out_to_console no
-update_interval 1.0
-total_run_times 0
 double_buffer yes
-minimum_size 1596 855
-draw_shades yes
+
+maximum_width 400
+draw_shades no
 draw_outline no
-draw_borders yes
-stippled_borders 0
-border_width 1
-default_color 657b83
-default_shade_color black
-default_outline_color white
-alignment top_left
-gap_x 0
-gap_y 0
+draw_borders no
+draw_graph_borders no
+default_color lightgray
+default_shade_color red
+default_outline_color green
+alignment top_right
+gap_x 24
+
 no_buffers yes
 uppercase no
 cpu_avg_samples 2
 net_avg_samples 2
-override_utf8_locale no
-use_spacer yes
-background 657b83
-# basetext
-color0 839496
-# emphasized
-color1 93a1a1
-#yellow
-color2 b58900
-#orange
-color3 cb4b16
-#red
-color4 dc322f
-#magenta
-color5 d33682
-#violet
-color6 6c71c4
-#blue
-color7 268bd2
-#cyan
-color9 2aa198
+override_utf8_locale yes
+use_spacer none
+
 
 TEXT
-${color0}ac               ${battery}
-${color0}kernel           ${color3}${kernel}
-${color0}vd1_temp         ${color3}${exec sensors | awk 'NR==3 {print $2}'} ${color9}C
-${color0}ip               ${if_up wlan0}${addr wlan0}${endif}${if_up eth0}${addr eth0}${endif}
-${color0}diskio           ${color3}${diskio /dev/sda}
-${color0}cpu              ${color3}${cpu}
-${color0}cpufreq          ${color3}${freq}
-${color0}acpi             ${color3}${exec acpi}
-TEXT
-# ${color slate grey}
-# ${color #ddaa00}
-${color #ccccee}BATTERY
-${color slate grey}power ${color #ddaa00}${if_match "$acpiacadapter"=="on-line"}charging${else}${color lightgrey}draining${endif} ${battery_percent}%
-${color }${battery_bar 10,130}
-${alignr}${color #ccccee}DISK
-${alignr}${color #ddaa00}${diskio_read}${color slate grey} read
-${alignr}${color}${diskiograph_read 10,130 000000 ffffff -t -l}
-${alignr}${color #ddaa00}${diskio_write}${color slate grey} write
-${alignr}${color}${diskiograph_write 10,130 000000 ffffff -t -l}
-${color #ccccee}NETWORK
-${color slate grey}essid ${color #ddaa00}${wireless_essid wlan0}
-${color slate grey}ip ${color #ddaa00}${addr wlan0}
-${color slate grey}mode ${color #ddaa00}${wireless_mode wlan0}
-${color slate grey}up ${color #ddaa00}${upspeed wlan0}
-${color }${upspeedgraph wlan0 10,130 000000 ffffff -l -t}
-${color slate grey}down ${color #ddaa00}${downspeed wlan0}${color}
-${color }${downspeedgraph wlan0 10,130 000000 ffffff -l -t}
-${alignr}${color #ccccee}CPU
-${alignr}${color slate grey}core 1: ${color #ddaa00}${cpu}%${color} ${color}${freq_g 1}GHz ${cpugraph cpu1 10,130 000000 ffffff -t -l}
-${alignr}${color slate grey}core 2: ${color #ddaa00}${cpu}%${color} ${color}${freq_g 2}GHz ${cpugraph cpu2 10,130 000000 ffffff -t -l}
-${alignr}${color slate grey}core 3: ${color #ddaa00}${cpu}%${color} ${color}${freq_g 3}GHz ${cpugraph cpu3 10,130 000000 ffffff -t -l}
-${alignr}${color slate grey}core 4: ${color #ddaa00}${cpu}%${color} ${color}${freq_g 4}GHz ${cpugraph cpu4 10,130 000000 ffffff -t -l}
-${alignr}${color slate grey}ram ${color #ddaa00}${mem}${color}/ ${memmax}
-${alignr}${color}${membar 10, 200}
+# ${alignc}${font Droid Sans:size=8}${color white}${execi 31 users | cut -c1-5}@$nodename
+${image /usr/share/icons/HighContrast/16x16/emotes/face-devilish.png -p 200}${alignc}${font Droid Sans:size=8}${color white}${execi 30 users}@$nodename
+$color${font}${font Droid Sans:size=7}$alignr${time %H:%M}$font
+${color dodgerblue3}${font Droid Sans:Bold:size=7}Date${hr 1}$color$font
+$color${font Droid Sans:size=7}$alignr${time %a}, ${time %d %b %Y}$font$color
+
+# SYS
+${image /usr/share/icons/HighContrast/16x16/emblems/emblem-system.png -p 0,80}${font Droid Sans:Bold:size=8}${color dodgerblue3}${offset 18}SYSTEM${hr 1}$color${font}
+$sysname $kernel $alignr $machine
+Uptime $alignr $uptime
+GPU Temperature $alignr ${execi 30 sensors | grep 'temp1:' | cut -c16-17}°C
+
+# CPU
+${image /usr/share/icons/HighContrast/16x16/mimetypes/application-x-appliance.png -p 0,155}${offset 18}${font Droid Sans:Bold:size=8}${color dodgerblue3}CPU${hr 1}
+$color${font}Intel i7 $alignr ${freq_g cpu0}GHz
+${font}Core 0 ${color dodgerblue3}${execi 30 sensors | grep 'Core 0:' | cut -c18-19}°C${color} @ ${cpu cpu1} % $alignc ${color dodgerblue3}${cpubar cpu1}${color}
+${font}Core 1 ${color dodgerblue3}${execi 30 sensors | grep 'Core 1:' | cut -c18-19}°C${color} @ ${cpu cpu2} % $alignc ${color dodgerblue3}${cpubar cpu2}${color}
+#${font}Core 2 ${color dodgerblue3}${execi 30 sensors | grep 'Core 2:' | cut -c18-19}°C${color} @ ${cpu cpu3} % $alignc ${color dodgerblue3}${cpubar cpu3}${color}
+#${font}Core 3 ${color dodgerblue3}${execi 30 sensors | grep 'Core 3:' | cut -c18-19}°C${color} @ ${cpu cpu4} % $alignc ${color dodgerblue3}${cpubar cpu4}${color}
+
+# # TOP
+# ${font Droid Sans:Bold:size=7}${color dodgerblue3}TOP${hr 1}
+# $color${font}${font Droid Sans:bold:size=7}PROCESS $alignr CPU USAGE$font
+# ${top name 1}${alignr}${top cpu 1} %
+# $ {top name 2}${alignr}${top cpu 2} %
+# ${top name 3}${alignr}${top cpu 3} %
+# ${top name 4}${alignr}${top cpu 4} %
+# ${top name 5}${alignr}${top cpu 5} %
+
+# MEMORY
+${image /usr/share/icons/HighContrast/16x16/devices/drive-multidisk.png -p 0,250}${offset 18}${font Droid Sans:Bold:size=8}${color dodgerblue3}MEMORY${hr 1}
+$color${font}${font Droid Sans:bold:size=7}RAM$font
+$mem / $memmax $alignr $memperc %
+$membar
+
+${font Droid Sans:bold:size=7}SWAP$font
+$swap / $swapmax $alignr $swapperc
+${swapbar};
+
+# NETWORK
+${image /usr/share/icons/HighContrast/16x16/places/folder-publicshare.png -p 0,390}${offset 18}${font Droid Sans:Bold:size=8}${color dodgerblue3}Network${hr 1}
+$color${font Droid Sans:bold:size=7}External IP ${font}${alignr}${execi 3600 wget -O - http://ip.tupeux.com | tail}$font
+
+${font Droid Sans:bold:size=7}wlan0 $font$alignr ${addr wlan0}
+down $alignr ${downspeedf wlan0} kb/s
+up $alignr ${upspeedf wlan0} kb/s
+down total ${totaldown wlan0} $alignr up total ${totalup wlan0}
+
+# HDD
+${image /usr/share/icons/HighContrast/16x16/devices/drive-harddisk.png -p 0,515}${offset 18}${font Droid Sans:Bold:size=8}${color dodgerblue3}Disks${hr 1}
+$color${font Droid Sans:bold:size=7}/dev/sda $font$alignr ${execi 30 sudo hddtemp /dev/sda | grep '/dev/sda:' | cut -c28-29}°C
+
+${font Droid Sans:bold:size=7}ROOT $font$font$alignr ${fs_type /}
+${fs_used /} / ${fs_size /} $alignr ${fs_used_perc /} %
+${fs_bar /}
+
+${font Droid Sans:bold:size=7}HOME $font$alignr ${fs_type /home}
+${fs_used /home} / ${fs_size /home} $alignr ${fs_used_perc /home} %
+${fs_bar /home}
