--- a/.i3/config
+++ b/.i3/config
@@ -132,7 +132,7 @@ bindsym $mod+r mode "resize"
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
-    status_command '/home/nathan/scripts/dzen/dz.sh'
+    status_command 'scripts/dzen/dz.sh'
 
     colors {
         background #00141a
