--- a/.i3/config
+++ b/.i3/config
@@ -2,9 +2,17 @@
 #
 # Please see http://i3wm.org/docs/userguide.html for a complete reference!
 
+default_orientation auto
+new_float 1pixel
+new_window 1pixel
+focus_follows_mouse yes
+popup_during_fullscreen smart
+workspace_auto_back_and_forth yes
+force_display_urgency_hint 500 ms
+
 # Solarized
 # class                 border  backgr. text    indicator
-client.focused          #00141a #00141a #93a1a1 #dc322f
+client.focused          #268bd2 #268bd2 #073642 #dc322f
 client.focused_inactive #073642 #073642 #839496 #b58900
 client.unfocused        #073642 #073642 #839496 #b58900
 client.urgent           #dc322f #dc322f #002b36 #002b36
@@ -13,14 +21,17 @@ set $mod Mod4
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below. ISO 10646 = Unicode
-#font -*-terminus-medium-*-normal-*-*-*-*-*-*-*-iso10646-*
-font pango:Terminus 10
+font -*-terminus-medium-*-*-*-16-*-*-*-*-*-iso10646-*
+#font pango:Terminus 10
 
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
 
 # start a terminal
-bindsym $mod+Return exec ~/scripts/urxvt.sh
+bindsym $mod+Return exec urxvt
+
+# lock --- broken!?
+# bindsym $mod+o exec 'i3lock -c 004354'
 
 # kill focused window
 bindsym $mod+Shift+q kill
@@ -106,8 +117,17 @@ bindsym $mod+Shift+c reload
 # Restart i3 inplace (preserves your layout/session, can be used to upgrade i3).
 bindsym $mod+Shift+r restart
 
+# dzen customization keybindings
+# bindcode 133 exec --no-startup-id "scripts/dzen/dz.sh"
+# bindcode --release 133 exec --no-startup-id "killall dzen2 conky dz.sh"
+# bindsym --release $mod exec --no-startup-id "killall dzen2 conky dz.sh"
+bindsym $mod+F1 exec --no-startup-id "scripts/dzen/dz.sh"
+bindsym $mod+F2 exec --no-startup-id "killall dzen2 conky gcpubar dz.sh"
+
+bindsym $mod+o exec "uzbl-browser"
+
 # exit i3 (logs you out of your X session)
-bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'Do you really want to exit i3? This will end your X session.' -b 'Yes, exit i3' 'i3-msg exit'"
+bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'Do you really want to exit i3? This will end your X session.' -b 'Yes, exit i3' 'killall dz.sh; i3-msg exit'"
 
 # resize window (you can also use the mouse for that)
 mode "resize" {
@@ -127,29 +147,33 @@ mode "move" {
         bindsym Escape mode "default"
 }
 
+# for_window [class="Firefox"] {
+#
+# }
+
+assign [class="Firefox"] 3
+
 bindsym $mod+r mode "resize"
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 # bar {
-#     status_command 'scripts/dzen/dz.sh'
-#     tray_output none
-#     workspace_buttons no
+#      status_command i3bar
+#      tray_output primary
+#      workspace_buttons yes
 #
-#     colors {
-#         background #00141a
-#         statusline #839496
-#         separator #586e75
-#         focused_workspace #268bd2 #268bd2 #00141a
-#         inactive_workspace #073642 #00141a #839496
-#     }
-# }
+#      colors {
+#          background #00141a
+#          statusline #839496
+#          separator #586e75
+#          focused_workspace #268bd2 #268bd2 #00141a
+#          inactive_workspace #073642 #00141a #839496
+#      }
+#  }
 
 # Hide vertical borders at screen edges
 # hide_edge_borders vertical
 
-# Delaying urgency hint reset on workspace change
-force_display_urgency_hint 500 ms
 
 # Make the currently focused window a scratchpad
 bindsym $mod+Shift+minus move scratchpad
@@ -160,15 +184,18 @@ bindsym $mod+equal exec 'scripts/i3/winmenu.py'
 # Show the first scratchpad window
 bindsym $mod+minus scratchpad show
 
+# Turn off touchpad
+exec --no-startup-id 'synclient TouchpadOff=1'
+
 # Use compositing
-exec compton -I .04 -O .04 -b -f -D 5 &
+exec --no-startup-id compton -I .04 -O .04 -b -f -D 5 &
 
-# Disable touchpad initially
-exec touchoff
+exec 'firefox'
 
-# Sets the background color.
-exec hsetroot -solid '#002b36'
-exec_always --no-startup-id 'scripts/dzen/dz.sh'
+exec --no-startup-id i3-msg 'workspace 9; exec scripts/urxvt.sh -e irssi; workspace 1'
+exec --no-startup-id 'unclutter'
+exec --no-startup-id hsetroot -solid '#002b36'
+exec --no-startup-id 'scripts/dzen/dz.sh'
 
 # The IPC interface allows programs like an external workspace bar
 # (i3-wsbar) or i3-msg (can be used to "remote-control" i3) to work.
