--- a/.i3/config
+++ b/.i3/config
@@ -5,7 +5,7 @@
 default_orientation auto
 new_float 1pixel
 new_window 1pixel
-focus_follows_mouse yes
+focus_follows_mouse no
 popup_during_fullscreen smart
 workspace_auto_back_and_forth yes
 force_display_urgency_hint 500 ms
