--- a/.tmux.conf
+++ b/.tmux.conf
@@ -17,7 +17,7 @@ set -g base-index 1
 set -g pane-base-index 1
 
 # screen mode
-set -g default-terminal "screen-256color"
+set -g default-terminal "linux"
 
 # source config file
 bind r source-file ~/.tmux.conf
@@ -43,6 +43,11 @@ set -g status-fg white
 set -g status-left ""
 set -g status-right "#[fg=green]#H"
 
+# By default, all windows in a session are constrained to the size of the
+# smallest client connected to that session, even if both clients are
+# looking at different windows.
+setw -g aggressive-resize on
+
 # Activity monitoring
 setw -g monitor-activity on
 set -g visual-activity on
@@ -52,3 +57,40 @@ set -g visual-activity on
 
 # Highlight active window
 set-window-option -g window-status-current-bg red
+
+# Proper titling
+set -g set-titles on
+set -g set-titles-string "#T"
+
+# --- colors (solarized dark)
+# default statusbar colors
+set -g status-bg black
+set -g status-fg yellow
+set -g status-attr default
+
+# default window title colors
+setw -g window-status-fg brightblue
+setw -g window-status-bg default
+
+# active window title colors
+setw -g window-status-current-fg yellow
+setw -g window-status-current-bg default
+setw -g window-status-current-attr dim
+
+# pane border
+set -g pane-border-fg black
+set -g pane-border-bg default
+set -g pane-active-border-fg yellow
+set -g pane-active-border-bg default
+
+# command line/message text
+set -g message-bg black
+set -g message-fg yellow
+
+# pane number display
+set -g display-panes-active-colour yellow
+set -g display-panes-colour brightblue
+
+# clock
+setw -g clock-mode-colour yellow
+# --- end colors
