--- a/.tmux.conf
+++ b/.tmux.conf
@@ -6,6 +6,17 @@ set-option -g prefix C-a
 # another TMUX session
 bind-key a send-prefix
 
+# I'm a Vim user, this makes navigation easier
+setw -g mode-keys vi # I especially like being able to search with /,? when in copy-mode
+unbind-key h
+bind-key h select-pane -L
+unbind-key j
+bind-key j select-pane -D # Similar to 'C-w j' to navigate windows in Vim
+unbind-key k
+bind-key k select-pane -U
+unbind-key l
+bind-key l select-pane -R
+
 # shell
 set -g default-command /bin/zsh
 set -g default-shell /bin/zsh
@@ -17,7 +28,7 @@ set -g base-index 1
 set -g pane-base-index 1
 
 # screen mode
-set -g default-terminal "linux"
+set -g default-terminal "screen-256color"
 
 # source config file
 bind r source-file ~/.tmux.conf
