--- a/.config/termite/config
+++ b/.config/termite/config
@@ -6,11 +6,11 @@ audible_bell = false
 visible_bell = false
 mouse_autohide = false
 allow_bold = true
+font = Terminus (TTF) 12
 dynamic_title = true
 urgent_on_bell = true
 clickable_url = true
-font = Terminus 8
-scrollback_lines = 1000
+scrollback_lines = 5000
 search_wrap = true
 #icon_name = terminal
 #geometry = 640x480
@@ -62,10 +62,10 @@ color14 = #8abeb7
 color15 = #c5c8c6
 
 [hints]
-font = Terminus-16
+font = Anonymous-Pro 10
 #foreground = #dcdccc
 #background = #3f3f3f
-padding = 2
-border = #3f3f3f
-border_width = 0.5
-roundness = 2.0
+#padding = 2
+#border = #3f3f3f
+#border_width = 8
+#roundness = 2.0
