--- a/.tmux.conf
+++ b/.tmux.conf
@@ -73,6 +73,12 @@ set-window-option -g window-status-current-bg red
 set -g set-titles on
 set -g set-titles-string "#T"
 
+# mouse mode
+set -g mode-mouse on
+set -g mouse-resize-pane on
+set -g mouse-select-pane on
+set -g mouse-select-window on
+
 # --- colors (solarized dark)
 # default statusbar colors
 if-shell 'test -z "$POWERLINE_COMMAND"' 'if-shell "which powerline-client" "set-environment -g POWERLINE_COMMAND powerline-client" "set-environment -g POWERLINE_COMMAND powerline"'
