--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,20 +2,27 @@
 unbind C-b
 set-option -g prefix C-a
 
+# Give us a slightly higher repeat delay for repeatable keystrokes
+set repeat-time 750
+
 # Allows us to use C-a a <command> to send commands to a TMUX session inside
 # another TMUX session
 bind-key a send-prefix
 
 # I'm a Vim user, this makes navigation easier
 setw -g mode-keys vi # I especially like being able to search with /,? when in copy-mode
-unbind-key h
-bind-key h select-pane -L
-unbind-key j
-bind-key j select-pane -D # Similar to 'C-w j' to navigate windows in Vim
-unbind-key k
-bind-key k select-pane -U
-unbind-key l
-bind-key l select-pane -R
+unbind [
+bind Escape copy-mode
+unbind p
+bind p paste-buffer
+bind -t vi-copy 'v' begin-selection
+bind -t vi-copy 'y' copy-selection
+
+# Pane breaking
+unbind Up
+bind Up new-window -d -n tmp \; swap-pane -s tmp.1 \; select-window -t tmp
+unbind Down
+bind Down last-window \; swap-pane -s tmp.1 \; kill-window -t tmp
 
 # shell
 set -g default-command /bin/zsh
@@ -31,7 +38,14 @@ set -g pane-base-index 1
 set -g default-terminal "screen-256color"
 
 # source config file
-bind r source-file ~/.tmux.conf
+bind r source-file ~/.tmux.conf \; display "Reloaded!"
+
+# turn off automatic window renaming
+set-window-option -g automatic-rename off
+
+# Window cycling
+bind -r C-h select-window -t:-
+bind -r C-l select-window -t:+
 
 # history
 set -g history-limit 4096
