--- a/.tmux.conf
+++ b/.tmux.conf
@@ -18,6 +18,23 @@ bind p paste-buffer
 bind -t vi-copy 'v' begin-selection
 bind -t vi-copy 'y' copy-selection
 
+# Vimish nav
+unbind-key h
+bind-key h select-pane -L
+unbind-key j
+bind-key j select-pane -D # Similar to 'C-w j' to navigate windows in Vim
+unbind-key k
+bind-key k select-pane -U
+unbind-key l
+bind-key l select-pane -R
+
+# smart pane switching with awareness of vim splits
+bind -n C-h run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-h) || tmux select-pane -L"
+bind -n C-j run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-j) || tmux select-pane -D"
+bind -n C-k run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-k) || tmux select-pane -U"
+bind -n C-l run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-l) || tmux select-pane -R"
+bind -n C-\ run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys 'C-\\') || tmux select-pane -l"
+
 # Pane breaking
 unbind Up
 bind Up new-window -d -n tmp \; swap-pane -s tmp.1 \; select-window -t tmp
@@ -44,8 +61,8 @@ bind r source-file ~/.tmux.conf \; display "Reloaded!"
 set-window-option -g automatic-rename off
 
 # Window cycling
-bind -r C-h select-window -t:-
-bind -r C-l select-window -t:+
+# bind -r C-h select-window -t:-
+# bind -r C-l select-window -t:+
 
 # history
 set -g history-limit 4096
