--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,6 @@
 # change prefix to Ctrl-a (like in gnu-screen)
 unbind C-b
-set-option -g prefix ralt
+set-option -g prefix C-a
 
 # Give us a slightly higher repeat delay for repeatable keystrokes
 set repeat-time 750
