--- a/.i3/config
+++ b/.i3/config
@@ -121,7 +121,7 @@ bindsym $mod+Shift+r restart
 bindsym $mod+F1 exec --no-startup-id "bin/dzen/dz.sh"
 bindsym $mod+F2 exec --no-startup-id "killall dzen2 conky gcpubar dz.sh trayer"
 
-bindsym $mod+o exec "uzbl-tabbed"
+bindsym $mod+o exec "uzbl-browser"
 
 # exit i3 (logs you out of your X session)
 bindsym $mod+Shift+q exec "i3-nagbar -t warning -m 'Do you really want to exit i3? This will end your X session.' -b 'Yes, exit i3' 'killall dz.sh; i3-msg exit'"
@@ -145,9 +145,9 @@ mode "move" {
 }
 
 # for_window [class="Firefox"] {
-#
 # }
 
+for_window [title="TeX Text"] floating enable
 assign [class="Firefox"] 3
 
 bindsym $mod+r mode "resize"
