--- a/.tmux.conf
+++ b/.tmux.conf
@@ -18,6 +18,12 @@ bind p paste-buffer
 bind -t vi-copy 'v' begin-selection
 bind -t vi-copy 'y' copy-selection
 
+# ICCCM selection
+#Copy tmux paste buffer to CLIPBOARD
+bind C-c run "tmux show-buffer | xclip -i -selection clipboard"
+#Copy CLIPBOARD to tmux paste buffer and paste tmux paste buffer
+bind C-v run "tmux set-buffer -- \"$(xclip -o -selection clipboard)\"; tmux paste-buffer"
+
 # Vimish nav
 unbind-key h
 bind-key h select-pane -L
