powerline special characters removed

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -116,11 +116,13 @@ set -g mouse-resize-pane on
 set -g mouse-select-pane on
 set -g mouse-select-window on
 
-# --- colors (solarized dark)
-# default statusbar colors
-if-shell 'test -z "$POWERLINE_COMMAND"' 'if-shell "which powerline-client" "set-environment -g POWERLINE_COMMAND powerline-client" "set-environment -g POWERLINE_COMMAND powerline"'
+# General status stuff
+set -g status-position bottom
 set -g status on
 set -g status-utf8 on
+
+# powerline stuff
+if-shell 'test -z "$POWERLINE_COMMAND"' 'if-shell "which powerline-client" "set-environment -g POWERLINE_COMMAND powerline-client" "set-environment -g POWERLINE_COMMAND powerline"'
 set -g status-interval 2
 set -g status-fg colour231
 set -g status-bg colour234
