moves keychain to xinit

--- a/.config/powerline/config.json
+++ b/.config/powerline/config.json
@@ -29,7 +29,7 @@
 		},
 		"tmux": {
 			"colorscheme": "default",
-			"theme": "default"
+			"theme": "custom"
 		},
 		"vim": {
 			"colorscheme": "default",
