--- a/.i3/config
+++ b/.i3/config
@@ -4,7 +4,7 @@
 
 default_orientation auto
 new_float 1pixel
-new_window 1pixel
+new_window pixel 2
 focus_follows_mouse no
 popup_during_fullscreen smart
 workspace_auto_back_and_forth yes
@@ -84,6 +84,8 @@ bindsym $mod+bracketleft focus parent
 # focus the child container
 bindsym $mod+bracketright focus child
 
+bindsym $mod+equal exec "~/bin/i3/winmenu.py"
+
 # switch to workspace
 bindsym $mod+1 workspace 1
 bindsym $mod+2 workspace 2
@@ -148,7 +150,7 @@ mode "move" {
 # }
 
 for_window [title="TeX Text"] floating enable
-assign [class="Firefox"] 3
+assign [class="dwb"] 3
 
 bindsym $mod+r mode "resize"
 
@@ -174,9 +176,6 @@ bindsym $mod+r mode "resize"
 # Make the currently focused window a scratchpad
 bindsym $mod+Shift+minus move scratchpad
 
-# Window list
-bindsym $mod+equal exec 'bin/i3/winmenu.py'
-
 # Show the first scratchpad window
 bindsym $mod+minus scratchpad show
 
@@ -201,7 +200,7 @@ bindsym $mod+d exec "termite -e ranger"
 # Use compositing
 # exec --no-startup-id compton -I .04 -O .04 -b -f -D 5 &
 
-exec --no-startup-id 'firefox'
+exec --no-startup-id 'dwb'
 
 #exec --no-startup-id i3-msg 'workspace 9; exec bin/urxvt.sh -e irssi; workspace 1'
 exec --no-startup-id 'unclutter'
