--- a/.tmux.conf
+++ b/.tmux.conf
@@ -121,8 +121,8 @@ set -g status-interval 2
 set -g status-fg colour231
 set -g status-bg colour234
 set -g status-left-length 20
-set -g status-left '#[fg=colour16,bg=colour254,bold] #S #[fg=colour254,bg=colour234,nobold] #(eval $POWERLINE_COMMAND tmux left)'
-set -g status-right '#(eval $POWERLINE_COMMAND tmux right -R pane_id=`tmux display -p "#D"`)'
+set -g status-left '#[fg=colour16,bg=colour254,bold] #S #[fg=colour254,bg=colour234,nobold]>'
+set -g status-right '#(eval hostname)'
 set -g status-right-length 150
 set -g window-status-format "#[fg=colour244,bg=colour234]#I #[fg=colour240]#[fg=colour249]#W"
 set -g window-status-current-format "#[fg=colour234,bg=colour31]#[fg=colour117,bg=colour31]#I #[fg=colour231,bold]#W#[fg=colour117]#[fg=colour31,bg=colour234,nobold]"
@@ -130,6 +130,7 @@ set -g window-status-current-format "#[fg=colour234,bg=colour31]#[fg=colour117,b
 # default window title colors
 setw -g window-status-fg brightblue
 setw -g window-status-bg default
+setw -g window-status-attr dim
 
 # active window title colors
 setw -g window-status-current-fg yellow
@@ -139,7 +140,7 @@ setw -g window-status-current-attr dim
 # pane border
 set -g pane-border-fg black
 set -g pane-border-bg default
-set -g pane-active-border-fg yellow
+set -g pane-active-border-fg red
 set -g pane-active-border-bg default
 
 # command line/message text
