--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,6 +2,12 @@
 unbind C-b
 set-option -g prefix C-a
 
+# vertical splits with |
+unbind %
+unbind -
+bind \ split-window -h
+bind - split-window -v
+
 # Give us a slightly higher repeat delay for repeatable keystrokes
 set repeat-time 750
 
