--- a/.tmux.conf
+++ b/.tmux.conf
@@ -7,6 +7,7 @@ unbind %
 unbind -
 bind \ split-window -h
 bind - split-window -v
+bind-key x kill-pane
 
 # Give us a slightly higher repeat delay for repeatable keystrokes
 set repeat-time 750
