--- a/.i3/config
+++ b/.i3/config
@@ -117,8 +117,8 @@ bindsym $mod+Shift+0 move container to workspace 10
 bindsym $mod+Shift+r restart
 
 # dzen customization keybindings
-# bindcode 133 exec --no-startup-id "bin/dzen/dz.sh"
-# bindcode --release 133 exec --no-startup-id "killall dzen2 conky dz.sh"
+bindcode 133 exec --no-startup-id "bin/dzen/dz.sh"
+bindcode --release 133 exec --no-startup-id "killall dzen2 conky dz.sh"
 # bindsym --release $mod exec --no-startup-id "killall dzen2 conky dz.sh"
 bindsym $mod+F1 exec --no-startup-id "bin/dzen/dz.sh"
 bindsym $mod+F2 exec --no-startup-id "killall dzen2 conky gcpubar dz.sh trayer"
@@ -156,19 +156,19 @@ bindsym $mod+r mode "resize"
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
-# bar {
-#      status_command i3bar
-#      tray_output primary
-#      workspace_buttons yes
-#
-#      colors {
-#          background #00141a
-#          statusline #839496
-#          separator #586e75
-#          focused_workspace #268bd2 #268bd2 #00141a
-#          inactive_workspace #073642 #00141a #839496
-#      }
-#  }
+bar {
+    status_command i3bar
+    tray_output primary
+    workspace_buttons yes
+
+    colors {
+        background #00141a
+        statusline #839496
+        separator #586e75
+        focused_workspace #268bd2 #268bd2 #00141a
+        inactive_workspace #073642 #00141a #839496
+    }
+}
 
 # Hide vertical borders at screen edges
 # hide_edge_borders both
